envio de variables a la vista, para ser mostrado el valor

--- a/views/nosotros.pug
+++ b/views/nosotros.pug
@@ -1,2 +1,8 @@
 //- <h1>Hola</h1>, esta sintaxis es similar a la de la linea siguiente
 h1 Hola
+p Desde pug 
+//- Para usar, las variables en la vista, debemos usar el signo igual (=)
+
+p= viajes 
+//- o podemos usar el signo de numeral (#) y las llaves ({})
+p #{viajes}
