Se agregan los estilos y las imagenes que se usaran
Adicional, se carga archivo public con el css de bootstrap y un estilo personalizado

--- a/views/nosotros.pug
+++ b/views/nosotros.pug
@@ -10,3 +10,6 @@ block contenido
     p= viajes 
     //- o podemos usar el signo de numeral (#) y las llaves ({})
     p #{viajes}
+
+    //- uso de imagenes
+    //- img(src="img/cupon.jpg", alt="cupon")
