Navegacion principal y Header
Se disena la navegacion principal, y el header colocando su icono

--- a/views/layout/index.pug
+++ b/views/layout/index.pug
@@ -11,6 +11,9 @@ html(lang="en")
         link(rel="stylesheet", href="/css/bootstrap.css")
         link(rel="stylesheet", href="/css/style.css")
     body 
-        h1 Agencia De Viajes
+        //- de esta forma incluimos el header o el footer
+        include header
         //- definimos el contenido que mostrara cada vista
         block contenido 
+
+        include footer
