--- a/views/inicio.pug
+++ b/views/inicio.pug
@@ -3,4 +3,6 @@ extends ./layout/index
 //- hacemos referencia al nombre del layout principal o del master pages, que se llama contenido
 //- Es importante la identación, de lo contrario se produciran errores
 block contenido
-    p Inicio
+    main.container.mt-5 
+        .row 
+            h1= pagina  
