--- a/views/testimoniales.pug
+++ b/views/testimoniales.pug
@@ -2,5 +2,27 @@ extends ./layout/index
 
 block contenido
     main.container.mt-5 
+        h1.text-center.mt-5 #{pagina}
         .row 
-            h1 #{pagina}
+
+            .col-md-12
+                h2.d-bloc.w-100.text-center Agrega un Testimonial
+
+                if(errores)
+                    each error in errores
+                        .alert.col.alert-danger.text-center= error.mensaje
+
+            .row.justify-content-center.col
+                .col-md-8 
+                    form(action="/testimoniales", method="POST") 
+                        .form-group
+                            label(for="nombre") Nombre
+                            input#nombre(type="text", placeholder="Tu Nombre", name="nombre", class="form-control", value= nombre)
+                        .form-group
+                            label(for="correo") Correo Electrónico
+                            input#correo(type="email", placeholder="Tu Correo Electrónico", name="correo", class="form-control", value= correo)
+                        .form-group
+                            label(for="mensaje") Mensaje
+                            textarea#mensaje(type="text", placeholder="Tu Mensaje", name="mensaje", class="form-control",
+                            rows=3)= mensaje
+                        input.btn.btn-success.btn-block(type="submit", value="Enviar")
