--- a/views/layout/index.pug
+++ b/views/layout/index.pug
@@ -10,9 +10,10 @@ html(lang="en")
 
         link(rel="stylesheet", href="/css/bootstrap.css")
         link(rel="stylesheet", href="/css/style.css")
-    body 
+    body(class= clase)
         //- de esta forma incluimos el header o el footer
         include header
+        block slider
         //- definimos el contenido que mostrara cada vista
         block contenido 
 
